--- a/src/components/Markets/Markets.css
+++ b/src/components/Markets/Markets.css
@@ -158,11 +158,8 @@
 } 
 */
 
-.Outer {
-    display: flex;
-    width: 75%;
-    margin: 40px auto;
-    padding-bottom: 80px;
+:local(.Outer) {
+    composes: PageFrame from global;
 }
 
 :local(.PageContainer) {
