--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,10 @@
+:global(.PageFrame) {
+    display: flex;
+    width: 75%;
+    margin: 40px auto;
+    padding-bottom: 80px;
+}
+
 :global(.Container) {
     background: #f5f5f5;
     width: 100%;
@@ -6,4 +13,120 @@
     margin-bottom: 40px;
     border-radius: 5px;
     box-shadow: 0 0 30px rgba(0,0,0,0.5);
+  }
+
+
+
+
+:global(.SlideIn-appear) {
+    transform: translateX(30px);
+    -webkit-transform: translateX(30px);
+    -moz-transform: translateX(30px);
+    -o-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    opacity: 0;
+  }
+  
+:global(.SlideIn-appear.SlideIn-appear-active) {
+    opacity: 1;
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -o-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transition: all 0.6s linear;
+  }
+:global(.SlideIn-enter) {
+      opacity: 0;
+      transform: translateX(30px);
+    -webkit-transform: translateX(30px);
+    -moz-transform: translateX(30px);
+    -o-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+  }
+:global(.SlideIn-enter.SlideIn-enter-active) {
+      opacity: 1;
+      transform: translateX(0);
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -o-transform: translateX(0);
+      -ms-transform: translateX(0);
+      transition: all 0.2s linear 0.4s;
+  }
+:global(.SlideIn-leave) {
+      opacity: 1.0;
+      transform: translateX(0);
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -o-transform: translateX(0);
+      -ms-transform: translateX(0);
+  }
+:global(.SlideIn-leave.SlideIn-leave-active) {
+      opacity: 0;
+      position: absolute;
+      width: 100%;
+      transform: translateX(-30px);
+      -webkit-transform: translateX(-30px);
+      -moz-transform: translateX(-30px);
+      -o-transform: translateX(-30px);
+      -ms-transform: translateX(-30px);
+      transition: all 0.2s linear;
+  }
+
+:global(.SlideOut-appear) {
+    transform: translateX(-30px);
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+    opacity: 0;
+}
+
+:global(.SlideOut-appear.SlideOut-appear-active) {
+    opacity: 1;
+    transform: translateX(0);
+    -webkit-transform: translateX(0);
+    -moz-transform: translateX(0);
+    -o-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transition: all 0.6s linear;
+  }
+
+:global(.SlideOut-enter) {
+      opacity: 0;
+      transform: translateX(-30px);
+    -webkit-transform: translateX(-30px);
+    -moz-transform: translateX(-30px);
+    -o-transform: translateX(-30px);
+    -ms-transform: translateX(-30px);
+  }
+
+:global(.SlideOut-enter.SlideOut-enter-active) {
+      opacity: 1;
+      transform: translateX(0);
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -o-transform: translateX(0);
+      -ms-transform: translateX(0);
+      transition: all 0.2s linear 0.4s;
+  }
+:global(.SlideOut-leave) {
+      opacity: 1.0;
+      transform: translateX(0);
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -o-transform: translateX(0);
+      -ms-transform: translateX(0);
+  }
+
+:global(.SlideOut-leave.SlideOut-leave-active) {
+      opacity: 0;
+      position: absolute;
+      width: 100%;
+      transform: translateX(30px);
+      -webkit-transform: translateX(30px);
+      -moz-transform: translateX(30px);
+      -o-transform: translateX(30px);
+      -ms-transform: translateX(30px);
+      transition: all 0.2s linear;
   }
