Added support for secondary value to AutoCompleteInput

--- a/src/components/AutoCompleteInput/AutoCompleteInput.css
+++ b/src/components/AutoCompleteInput/AutoCompleteInput.css
@@ -9,3 +9,30 @@
 ::-webkit-scrollbar-thumb {
     background-color: #008eff;
 }
+
+.ComplexItemWrapper {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
+    align-items: center;
+    /* display: flex */
+}
+
+.ItemImageField {
+    width: 24px;
+    margin-right: 10px;
+    float: left;
+}
+
+.ItemDisplayField {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline;
+}
+
+.ItemSecondaryField {
+    float: right;
+    font-weight: bold;
+}
