--- a/src/components/Markets/Markets.css
+++ b/src/components/Markets/Markets.css
@@ -158,22 +158,24 @@
 } 
 */
 
-.Outer {
-    width: 1000px;
-    margin: 40px auto;
-    height: 70%;
+:local(.Outer) {
+    composes: PageFrame from global;
+}
+
+:local(.PageContainer) {
+    composes: Container from global;
 }
 
 /* This is a white box panel with drop shadow */
-.Container {
+/* .Container {
     background: #f5f5f5;
     height: 100%;
     padding: 50px;
     border-radius: 5px;
     box-shadow: 0 0 30px rgba(0,0,0,0.5);
-}
+} */
 
-.Container > p {
+/* .Container > p {
     color: black;
     text-shadow: 1px 1px 0px white;
-}
+} */
