--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -5,4 +5,45 @@
 
 :local(.PageContainer) {
     composes: Container from global;
+    text-align: center;
+}
+
+.p {
+    color: black;
+    text-shadow: 1px 1px 0px white;
+}
+
+.Heading {
+    text-align: center;
+    font-size: 2em;
+}
+
+.SubHeading {
+    text-align: center;
+    font-size: 1.25em;
+    margin-top: 40px;
+}
+
+.a {
+    color: #008eff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.a:visited {
+    color: #008eff;
+}
+
+.Photo {
+    width: 180px;
+}
+
+.ContributorContainer {
+    display: inline-flex;
+}
+
+.ContributorName {
+    font-weight: bold;
+    text-shadow: 1px 1px 0px white;
+    /* font-size: 1.25em; */
 }
