--- a/src/components/TradingDataTable/TradingDataTable.css
+++ b/src/components/TradingDataTable/TradingDataTable.css
@@ -3,3 +3,14 @@
     color: white;   
     /* font-weight: bold; */
 }
+
+.Table {
+    width: 100%;
+    height: 100%;
+}
+
+.TableContainer {
+    display: flex;
+    width: 100%;
+    height: 95%;
+}
