Fixed nav bar to properly track active state

--- a/src/components/MyTrades/MyTrades.css
+++ b/src/components/MyTrades/MyTrades.css
@@ -6,3 +6,8 @@
 :local(.PageContainer) {
     composes: Container from global;
 }
+
+.MessageContainer {
+    text-align: center;
+    font-size: 1.5em;
+}
