--- a/src/components/Navigation/Navbar/Navbar.css
+++ b/src/components/Navigation/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .Navbar {
     background-color: rgba(0,0,0,0.6);
-    padding: 5px 20px;
-    height: 30px;
+    /* padding: 5px 20px; */
+    /* height: 30px; */
+    padding-left: 20px;
     margin: 0;    
 }
