--- a/src/components/Markets/Markets.css
+++ b/src/components/Markets/Markets.css
@@ -15,7 +15,16 @@
 
 .TableContainer {
     display: flex;
-    height: 100%;
+    height: 95%;
+    width: 100%;
+    /* margin-top: 10px; */
+}
+
+.SwitchContainer {
+    display: flex;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* This one is the semi transparent box from Token Trader */
