--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: 'Open Sans';
+  font-family: 'Open Sans' !important;
 }
 
 html {
