--- a/src/components/Donate/Donate.css
+++ b/src/components/Donate/Donate.css
@@ -14,6 +14,12 @@
     text-shadow: 1px 1px 0px white;
 }
 
+.failedMessage {
+    color: red;
+    font-style: italic;
+    text-shadow: 1px 1px 0px white;    
+}
+
 .Heading {
     text-align: center;
     font-size: 2em;
@@ -33,6 +39,7 @@
     overflow: auto;
     width: 100%;
     max-height: 100%;
+    margin:auto;
 }
 
 .GuestbookEnterMessage {
@@ -40,11 +47,14 @@
     float: left;
     max-height: inherit;
     overflow: hidden;
+    margin: auto;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .GuestbookReadMessages {
     width: 49%;
     float: right;
-    display: flex;
     overflow: auto;
+    margin: auto;
 }
