--- a/src/components/Donate/Donate.css
+++ b/src/components/Donate/Donate.css
@@ -38,7 +38,7 @@
 .Guestbook {
     overflow: auto;
     width: 100%;
-    max-height: 100%;
+    height: 100%;
     margin:auto;
 }
 
@@ -55,6 +55,6 @@
 .GuestbookReadMessages {
     width: 49%;
     float: right;
-    overflow: auto;
+    overflow: hidden;
     margin: auto;
 }
