Fixed margin for error messages to be on some height

--- a/src/components/Donate/Donate.css
+++ b/src/components/Donate/Donate.css
@@ -48,7 +48,7 @@
     max-height: inherit;
     overflow: hidden;
     margin: auto;
-    padding: 20px;
+    /* padding: 20px; */
     box-sizing: border-box;
 }
 
