--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -39,8 +39,14 @@
     color: #008eff;
     font-size: 0.75em;
     letter-spacing: 2px;
-    line-height: 50px;
-    margin-top: 0;
+    margin-top: 5px;
     font-weight: bold;
     text-decoration: none;
+}
+
+@media only screen and (min-width: 500px) {
+    .Link {
+        line-height: 50px;
+        margin-top: 0px;
+    }
 }
