--- a/src/global.css
+++ b/src/global.css
@@ -1,24 +1,47 @@
 :global(.PageFrame) {
-    display: flex;
-    width: 75%;
-    margin: 40px auto;
-    padding-bottom: 80px;
+  display: flex;
+  width: 100%;
+  margin: 10px auto;
+  padding-bottom: 80px;
 }
 
 :global(.Container) {
-    background: #f5f5f5;
-    width: 100%;
-    /* height: 100%; */
+  background: #f5f5f5;
+  width: 100%;
+  padding: 0px 10px 10px 10px;
+  margin: 0px 10px 70px 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: gainsboro;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #008eff;
+}
+
+@media only screen and (min-width: 600px) {
+  :global(.PageFrame) {
+    width: 75%;
+    margin: 40px auto;
+}
+
+:global(.Container) {
     padding: 50px;
     margin-bottom: 40px;
-    border-radius: 5px;
     box-shadow: 0 0 30px rgba(0,0,0,0.5);
-    overflow: auto;
   }
+}
 
-
-
-
+/* Animations */
 :global(.SlideIn-appear) {
     transform: translateX(30px);
     -webkit-transform: translateX(30px);
