--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -15,13 +15,14 @@
 
 .Heading {
   text-align: center;
-  font-size: 2em;
+  font-size: 1.5em;
+  margin: 5px 0px 0px 0px;
 }
 
 .SubHeading {
   text-align: center;
   font-size: 1.25em;
-  margin-top: 40px;
+  margin: 5px 0px 0px 0px;
 }
 
 .a {
@@ -46,4 +47,16 @@
   font-weight: bold;
   text-shadow: 1px 1px 0px white;
   /* font-size: 1.25em; */
+}
+
+@media only screen and (min-width: 321px) {
+  .Heading {
+    font-size: 2em;
+    margin: auto;
+  }
+  
+  .SubHeading {
+    font-size: 1.25em;
+    margin: 40px auto auto auto;
+  }
 }
