--- a/src/components/Donate/Donate.css
+++ b/src/components/Donate/Donate.css
@@ -21,7 +21,8 @@
 
 .Heading {
   text-align: center;
-  font-size: 2em;
+  font-size: 1.25em;
+  margin: 5px 0px 0px 0px;
 }
 
 .a {
@@ -38,7 +39,7 @@
   overflow: auto;
   width: 100%;
   height: 100%;
-  margin:auto;
+  margin: auto;
 }
 
 .GuestbookEnterMessage {
@@ -56,4 +57,22 @@
   float: right;
   overflow: hidden;
   margin: auto;
+}
+
+@media only screen and (max-width: 360px) {
+  .p {
+    margin: 10px;
+    font-size: 0.85em;
+  }
+}
+
+@media only screen and (min-width: 361px) {
+  .Heading {
+    font-size: 2em;
+    margin: auto;
+  }
+
+  .p {
+    margin: default;
+  }
 }
