--- a/src/components/CandlestickChart/CandlestickChart.css
+++ b/src/components/CandlestickChart/CandlestickChart.css
@@ -1,16 +1,16 @@
 .Chart {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .ChartContainer {
-    display: flex;
-    width: 100%;
-    height: 95%;
+  display: flex;
+  width: 100%;
+  height: 95%;
 }
 
 .forceFont {
-    font-family: 'Open Sans' !important;
+  font-family: 'Open Sans' !important;
 }
 
 :global(.react-stockcharts-grabbing-cursor),
@@ -22,11 +22,19 @@
 }
 
 :global(.react-stockcharts-tooltip) {
-    font-family: 'Open Sans';
-    font-weight: 600;
+  display: none;
 }
 
 :global(text) {
-    font-family: 'Open Sans';
-    font-weight: 600;
+  font-family: 'Open Sans';
+  font-weight: 600;
 }
+
+@media only screen and (min-width: 600px) {
+  :global(.react-stockcharts-tooltip) {
+    display: flex;
+    font-family: 'Open Sans';
+    font-weight: 600;  
+  }
+}
+
