--- a/src/components/Markets/Markets.css
+++ b/src/components/Markets/Markets.css
@@ -23,8 +23,17 @@
 
 .SwitchContainer {
     display: flex;
-    width: 100%;
+    float: left;
+    width: 70%;
     padding-top: 5px;
+}
+
+.MenuContainer {
+    display: flex;
+    float: right;
+    padding-top: 5px;
+    margin-right: 10px;
+
 }
 
 @media only screen and (min-width: 600px) {
