--- a/src/components/CandlestickChart/CandlestickChart.css
+++ b/src/components/CandlestickChart/CandlestickChart.css
@@ -1,14 +1,40 @@
 .Chart {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .ChartContainer {
-    display: flex;
-    width: 100%;
-    height: 95%;
+  display: flex;
+  width: 100%;
+  height: 95%;
 }
 
 .forceFont {
-    font-family: 'Open Sans' !important;
+  font-family: 'Open Sans' !important;
 }
+
+:global(.react-stockcharts-grabbing-cursor),
+:global(.react-stockcharts-crosshair-cursor) {
+	/* stroke: #000000; */
+	stroke-width: 1;
+	opacity: 1 !important;
+	fill-opacity: 0 !important;
+}
+
+:global(.react-stockcharts-tooltip) {
+  display: none;
+}
+
+:global(text) {
+  font-family: 'Open Sans';
+  font-weight: 600;
+}
+
+@media only screen and (min-width: 700px) {
+  :global(.react-stockcharts-tooltip) {
+    display: flex;
+    font-family: 'Open Sans';
+    font-weight: 600;  
+  }
+}
+
