--- a/src/components/Markets/Markets.css
+++ b/src/components/Markets/Markets.css
@@ -21,10 +21,10 @@
     /* margin-top: 10px; */
 }
 
-.SwitchContainer {
+.TabsBarContainer {
     display: flex;
     float: left;
-    width: 70%;
+    width: 80%;
     padding-top: 5px;
 }
 
@@ -33,6 +33,7 @@
     float: right;
     padding-top: 5px;
     margin-right: 10px;
+    margin: auto;
 
 }
 
@@ -47,7 +48,7 @@
         width: 40%;
     }
 
-    .SwitchContainer {
+    .TabsBarContainer {
         padding-top: 10px;
         padding-bottom: 10px;
     }
