--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,10 @@
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: #008EFF;
+  background-color: #f5f5f5;
   padding: 0;
   display: flex;
   flex-direction: column;
-}
-
-.Background {
-  content: '';
-  display: block;
-  height: 100%;
-  width: 100%;
-  border-radius: 0;
-  background: radial-gradient(circle at 0% 0%, rgba(0,255,231,.9),rgba(0,255,231,0) 50%), radial-gradient(circle at 100% 100%, rgba(0,255,231,.9),rgba(0,255,231,0) 60%);
 }
 
 .Container {
