--- a/src/components/Navigation/Navbar/Navbar.css
+++ b/src/components/Navigation/Navbar/Navbar.css
@@ -1,7 +1,8 @@
 .Navbar {
-    background-color: rgba(0,0,0,0.6);
+    background-color: rgba(0,0,0,1);
     /* padding: 5px 20px; */
     /* height: 30px; */
     padding-left: 20px;
     margin: 0;    
+    box-shadow: 0 2px 10px 0px rgba(0,0,0,0.5);
 }
