--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,8 @@
 :global(.PageFrame) {
-  display: flex;
+  display: block;
   width: 100%;
-  margin: 10px auto;
-  padding-bottom: 80px;
+  /* margin: 10px auto; */
+  /* padding-bottom: 80px; */
 }
 
 :global(.Container) {
@@ -30,8 +30,9 @@
 
 @media only screen and (min-width: 600px) {
   :global(.PageFrame) {
-    width: 75%;
-    margin: 40px auto;
+    /* width: 75%; */
+    margin: 20px;
+    /* width: 95%; */
 }
 
 :global(.Container) {
