--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -8,3 +8,15 @@
       font-family: 'Open Sans';
       font-weight: 700;
   }
+
+  .tooltip {
+    position: absolute;
+    text-align: center;
+    width: 180px;
+    height: 200px;
+    padding: 8px;
+    font-family: 'Open Sans';
+    font-size: 10px;
+    background: rgba(0, 0, 0, 0.5);
+    pointer-events: none;
+  }
