--- a/src/components/StatsBar/StatsBar.css
+++ b/src/components/StatsBar/StatsBar.css
@@ -1,4 +1,4 @@
-.StatsBar {
+.StatsBarContainer {
     background-color: rgba(255,255,255,0.3);
     /* padding: 5px 20px; */
     /* padding-left: 20px; */
@@ -6,5 +6,8 @@
     margin: auto;
     text-align:center;
     position: absolute;
-    font-weight: bold;
+}
+
+.StatsBarContainer > .StatsBarText {
+	font-weight: bold;	
 }
