Don't display StatsBar if screen width is too small

--- a/src/components/StatsBar/StatsBar.css
+++ b/src/components/StatsBar/StatsBar.css
@@ -11,3 +11,9 @@
 .StatsBarContainer > .StatsBarText {
 	font-weight: bold;	
 }
+
+@media only screen and (max-width: 600px) {
+  .StatsBarContainer {  
+    display: none;
+  }
+}
