Add histogram of top 7 volume in $ to front page

--- a/src/components/TokenStats/TokenStats.css
+++ b/src/components/TokenStats/TokenStats.css
@@ -9,6 +9,11 @@
   overflow: hidden;
 }
 
+.UpperText {
+  text-align: center;
+  font-size: 1.5em;
+}
+
 .TokenStatsContainer {
   text-align: center;
   width: 100%;
