--- a/src/components/TokenStats/TokenStats.css
+++ b/src/components/TokenStats/TokenStats.css
@@ -19,3 +19,12 @@
   width: 100%;
   height: 95%;
 }
+
+.customTooltip {
+  background-color: rgba(255,255,255,0.3);
+  border-style: solid;
+  border-color: rgba(255,255,255,0.4);
+  border-width: 1px;
+  border-radius: 5px;
+
+}
