--- a/src/components/TokenStats/TokenStats.css
+++ b/src/components/TokenStats/TokenStats.css
@@ -16,10 +16,11 @@
 }
 
 .customTooltip {
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(0, 0, 0, 0.75);
   border-style: solid;
-  border-color: rgba(255,255,255,0.4);
-  border-width: 1px;
-  border-radius: 5px;
-
+  border-color: rgba(0,142,255,1);
+  border-width: 4px;
+  color: white;
+  text-align: center;
+  padding: 10px 20px;
 }
